--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate:dev": "npx dotenv -e .env.development -- prisma migrate dev"
+    "migrate:dev": "npx dotenv -e .env.development -- prisma migrate dev",
+    "migrate:prod": "npx dotenv -e .env.production -- prisma migrate deploy"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
