--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,22 @@ services:
     build:
       context: ./
       dockerfile: ./Dockerfile
+    depends_on:
+      - mysql-container
     ports:
       - 80:3000
+    networks:
+      - common-network
+  mysql-container:
+    image: mysql
+    volumes:
+      - /Users/wangxiaoyu/mysql-data:/var/lib/mysql
+    environment:
+      MYSQL_DATABASE: galary
+      MYSQL_ROOT_PASSWORD: Zecheng1107$$
+    networks:
+      - common-network
+
+networks:
+  common-network:
+    driver: bridge
