--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       - common-network
   mysql-container:
     image: mysql
-    volumes:
-      - /Users/wangxiaoyu/mysql-data:/var/lib/mysql
+    # volumes:
+    #   - /Users/wangxiaoyu/mysql-data:/var/lib/mysql
     environment:
       MYSQL_DATABASE: galary
       MYSQL_ROOT_PASSWORD: Zecheng1107$$
