--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     build:
       context: ./
       dockerfile: ./Dockerfile
-    depends_on:
-      - mysql-container
+    # depends_on:
+    #   - mysql-container
     ports:
       - 80:3000
     networks:
