--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
-registry=https://registry.npm.taobao.org
+# registry=https://registry.npm.taobao.org
+registry=https://mirrors.cloud.tencent.com/npm/
 # registry=https://registry.npmmirror.com
