--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate:dev": "npx dotenv -e .env.development -- prisma migrate dev",
-    "migrate:prod": "npx dotenv -e .env.production -- prisma migrate deploy"
+    "migration:create": "npx typeorm-ts-node-esm migration:create ./src/migration/createUserTable"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
